# ChangeLog for dev-java/icedtea-web
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/icedtea-web/ChangeLog,v 1.45 2014/11/01 22:47:10 caster Exp $

*icedtea-web-1.5.1 (01 Nov 2014)

  01 Nov 2014; Vlastimil Babka <caster@gentoo.org> -icedtea-web-1.4.1.ebuild,
  icedtea-web-1.4.2-r1.ebuild, +icedtea-web-1.5.1.ebuild,
  +files/icedtea-web-1.5-respect-ldflags.patch, metadata.xml:
  Version bump, bug #512094. Adds optional USE=tagsoup which should allow
  parsing malformed .jnlp files, at the cost of 35 java packages in
  build-deptree. Depend on app-arch/zip, bug #516696.

  01 Nov 2014; Vlastimil Babka <caster@gentoo.org> icedtea-web-1.3.2-r7.ebuild:
  Block >=icedtea-7.2.5.3 to make the block mutual.

  01 Nov 2014; Vlastimil Babka <caster@gentoo.org> icedtea-web-1.3.2.ebuild:
  Block >=icedtea-6.1.13.5-r1 to make the block mutual.

  01 Jul 2014; Agostino Sarubbo <ago@gentoo.org> icedtea-web-1.4.2.ebuild:
  Stable for x86, wrt bug #501472

  01 Jul 2014; Agostino Sarubbo <ago@gentoo.org> icedtea-web-1.4.2.ebuild:
  Stable for amd64, wrt bug #501472

*icedtea-web-1.4.2-r1 (27 Jun 2014)

  27 Jun 2014; Vlastimil Babka <caster@gentoo.org> icedtea-web-1.4.2.ebuild,
  +icedtea-web-1.4.2-r1.ebuild:
  Revbump the current icedtea-web-1.4.2 to 1.4.2-r1 without change. Then remove
  icedtea7 USE flag and associated dependency from -r0, so it can be
  stabilized. Security bug #501472.

*icedtea-web-1.4.2 (01 Jun 2014)

  01 Jun 2014; Vlastimil Babka <caster@gentoo.org> +icedtea-web-1.4.2.ebuild:
  Version bump, security bug #501472.

  30 Dec 2013; Tom Wijsman <TomWij@gentoo.org> -icedtea-web-1.3.1-r7.ebuild,
  -icedtea-web-1.3.1.ebuild, metadata.xml:
  Dropped vulnerable 1.3.1* (and unused local USE-descriptions gtk2 and gtk3)
  for security bug #483198.

  11 Nov 2013; Vlastimil Babka <caster@gentoo.org> icedtea-web-1.4.1.ebuild,
  metadata.xml: