@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/icedtea-web
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/icedtea-web/ChangeLog,v 1.45 2014/11/01 22:47:10 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/icedtea-web/ChangeLog,v 1.46 2014/11/02 08:50:06 patrick Exp $
+
+*icedtea-web-1.5.1-r1 (02 Nov 2014)
+
+  02 Nov 2014; Patrick Lauer <patrick@gentoo.org> +icedtea-web-1.5.1-r1.ebuild:
+  Add ebuild for 1.5.1 that unconditionally depends on tagsoup #527962
 
 *icedtea-web-1.5.1 (01 Nov 2014)
 
